Fixed SVG images not showing up in production.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@177 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -12,4 +12,8 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # SVG images need this for production...
+    AddType image/svg+xml svg svgz
+    AddEncoding gzip svgz
 </IfModule>
